--- a/coin-collector/.gitignore
+++ b/coin-collector/.gitignore
@@ -4,13 +4,10 @@
 /dist
 /tmp
 /out-tsc
+/coin-collector-*
 
 # dependencies
 /node_modules
-
-# profiling files
-chrome-profiler-events.json
-speed-measure-plugin.json
 
 # IDEs and editors
 /.idea
