added splash-loading-window -- copyfiles script package.json

--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -10,7 +10,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "electron": "npm run electron-compile && ng build --base-href ./ && npm run electron-serve",
-    "electron-compile": "tsc --p electron",
+    "electron-compile": "tsc --p electron && npm run electron-splashscreen",
+    "electron-splashscreen": "copyfiles electron/**/*.html electron/**/*.css electron/**/*.js dist/",
     "electron-prod": "npm run electron-compile && ng build --prod --build-optimizer --base-href ./ && npm run electron-serve",
     "electron-build": "npm run electron-compile && ng build --base-href ./",
     "electron-build-prod": "npm run electron-compile && ng build --prod --build-optimizer --base-href ./",
@@ -40,6 +41,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "copyfiles": "^2.1.0",
     "electron": "^3.0.10",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
