--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
+    "dexie": "^2.0.4",
     "hammerjs": "^2.0.8",
     "ngx-perfect-scrollbar": "^7.1.0",
     "rxjs": "~6.3.3",
