--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -33,6 +33,9 @@
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
     "hammerjs": "^2.0.8",
+    "ngx-childprocess": "0.0.6",
+    "ngx-electron": "^2.0.0",
+    "ngx-fs": "0.0.1",
     "ngx-perfect-scrollbar": "^7.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
