--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -27,12 +27,14 @@
     "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "~7.1.0",
     "@angular/material": "^7.1.1",
+    "@angular/material-moment-adapter": "^7.1.1",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "ngx-childprocess": "0.0.6",
     "ngx-electron": "^2.0.0",
     "ngx-fs": "0.0.1",
