--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -15,7 +15,9 @@
     "electron-prod": "npm run electron-compile && ng build --prod --build-optimizer --base-href ./ && npm run electron-serve",
     "electron-build": "npm run electron-compile && ng build --base-href ./",
     "electron-build-prod": "npm run electron-compile && ng build --prod --build-optimizer --base-href ./",
-    "electron-serve": "electron ."
+    "electron-serve": "electron .",
+    "electron-deploy": "electron-packager . --asar --all --prune",
+    "electron-deploy-windows": "electron-packager . --asar --platform=win32 --prune"
   },
   "private": true,
   "dependencies": {
@@ -31,8 +33,10 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "angular2-hotkeys": "^2.1.4",
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
+    "extract-zip": "^1.6.7",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "ngx-childprocess": "0.0.6",
@@ -41,6 +45,7 @@
     "ngx-perfect-scrollbar": "^7.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "zip-a-folder": "0.0.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
