--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -59,6 +59,7 @@
     "codelyzer": "~4.5.0",
     "copyfiles": "^2.1.0",
     "electron": "^3.0.10",
+    "electron-packager": "^13.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
