--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -16,8 +16,10 @@
     "electron-build": "npm run electron-compile && ng build --base-href ./",
     "electron-build-prod": "npm run electron-compile && ng build --prod --build-optimizer --base-href ./",
     "electron-serve": "electron .",
-    "electron-deploy": "electron-packager . --asar --all --prune",
-    "electron-deploy-windows": "electron-packager . --asar --platform=win32 --prune"
+    "electron-package": "electron-packager . CoinCollector --asar --all --prune --out=../dist/packaged --icon=./resources/icon/icon.ico --overwrite",
+    "electron-package-windows": "electron-packager . CoinCollector --asar --platform=win32 --prune --out=../dist/packaged --icon=./resources/icon/icon.ico --overwrite",
+    "electron-installer-compile": "tsc --p installer",
+    "electron-deploy-windows": "npm run electron-installer-compile && node dist/installer/build"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +38,8 @@
     "angular2-hotkeys": "^2.1.4",
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-winstaller": "^2.7.0",
     "extract-zip": "^1.6.7",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
