--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -39,7 +39,6 @@
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
     "electron-squirrel-startup": "^1.0.0",
-    "electron-winstaller": "^2.7.0",
     "extract-zip": "^1.6.7",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
@@ -59,11 +58,12 @@
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "copyfiles": "^2.1.0",
     "electron": "^3.0.10",
     "electron-packager": "^13.0.0",
+    "electron-winstaller": "^2.7.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
