added icons maker -- ios installer

--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -16,12 +16,16 @@
     "electron-build": "npm run electron-compile && ng build --base-href ./",
     "electron-build-prod": "npm run electron-compile && ng build --prod --build-optimizer --base-href ./",
     "electron-serve": "electron .",
-    "electron-package": "electron-packager . CoinCollector --asar --all --prune --out=../dist/packaged --icon=./resources/icon/icon.ico --overwrite",
-    "electron-package-windows": "electron-packager . CoinCollector --asar --platform=win32 --prune --out=../dist/packaged --icon=./resources/icon/icon.ico --overwrite",
-    "electron-package-linux": "electron-packager . CoinCollector --asar --platform=linux --arch=x64 --prune --out=../dist/packaged --icon=./resources/icon/icon.ico --overwrite",
-    "electron-installer-compile": "tsc --p installer",
-    "electron-deploy-windows": "npm run electron-installer-compile && node dist/installer/build",
-    "electron-windows": "npm run electron-compile && npm run electron-build-prod && npm run electron-package-windows && npm run electron-deploy-windows"
+    "electron-icons": "electron-icon-maker --input=resources/src/icon.png --output=./resources",
+    "electron-package": "npm run electron-icons && electron-packager . CoinCollector --asar --all --prune --out=../dist/packaged --icon=resources/src/icon/icon.ico --overwrite",
+    "electron-package-windows": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=win32 --arch=x64 --prune --out=../dist/packaged --icon=resources/icons/win/icon.ico --overwrite",
+    "electron-package-linux": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=linux --arch=x64 --prune --out=../dist/packaged --icon=resources/icons/png/64x64.png --overwrite",
+    "electron-package-mac": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=darwin --arch=x64 --prune --out=../dist/packaged --icon=resources/icons/mac/icon.icns --overwrite",
+    "electron-winstaller-compile": "tsc --p installer",
+    "electron-deploy-windows": "npm run electron-winstaller-compile && node dist/installer/build",
+    "electron-deploy-mac": "electron-installer-dmg ../dist/packaged/CoinCollector-darwin-x64 CoinCollector --out=../dist/deployed/mac --overwrite --icon=resources/icons/mac/icon.icns",
+    "electron-windows": "npm run electron-compile && npm run electron-build-prod && npm run electron-package-windows && npm run electron-deploy-windows",
+    "electron-mac": "npm run electron-compile && npm run electron-build-prod && npm run electron-package-mac && npm run electron-deploy-mac"
   },
   "private": true,
   "dependencies": {
@@ -64,6 +68,8 @@
     "codelyzer": "~4.5.0",
     "copyfiles": "^2.1.0",
     "electron": "^3.0.10",
+    "electron-icon-maker": "0.0.4",
+    "electron-installer-dmg": "^2.0.0",
     "electron-packager": "^13.0.0",
     "electron-winstaller": "^2.7.0",
     "jasmine-core": "~2.99.1",
