--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -1,9 +1,18 @@
 {
   "name": "coin-collector",
   "main": "dist/electron/main.js",
-  "author": "Eugenio Vinicio Berretta",
+  "author": "Eugenio Vinicio Berretta <euberdeveloper@gmail.com>",
   "license": "MIT",
   "version": "1.0.0",
+  "homepage": "https://github.com/euberdeveloper/coin-collector#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/euberdeveloper/coin-collector"
+  },
+  "bugs": {
+    "url": "https://github.com/euberdeveloper/coin-collector/issues",
+    "email": "euberdeveloper@gmail.com"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -60,6 +69,7 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "typeface-roboto": "0.0.54",
+    "update-electron-app": "^1.3.0",
     "zip-a-folder": "0.0.6",
     "zone.js": "~0.8.26"
   },
