--- a/coin-collector/electron/tsconfig.json
+++ b/coin-collector/electron/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "../dist/electron",
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": false,
     "module": "commonjs",
     "moduleResolution": "node",
