--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -3,7 +3,7 @@
   "main": "dist/electron/main.js",
   "author": "Eugenio Vinicio Berretta <euberdeveloper@gmail.com>",
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "2.9.9",
   "homepage": "https://github.com/euberdeveloper/coin-collector#readme",
   "repository": {
     "type": "git",
@@ -57,6 +57,7 @@
     "angular2-hotkeys": "^2.1.4",
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
+    "electron-is-dev": "^1.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "extract-zip": "^1.6.7",
     "hammerjs": "^2.0.8",
@@ -69,7 +70,6 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "typeface-roboto": "0.0.54",
-    "update-electron-app": "^1.3.0",
     "zip-a-folder": "0.0.6",
     "zone.js": "~0.8.26"
   },
