--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -3,100 +3,55 @@
   "main": "dist/electron/main.js",
   "author": "Eugenio Vinicio Berretta <euberdeveloper@gmail.com>",
   "license": "MIT",
-  "version": "3.0.0",
+  "version": "3.2.0",
   "homepage": "https://github.com/euberdeveloper/coin-collector#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/euberdeveloper/coin-collector"
+    "url": "git+https://github.com/euberdeveloper/coin-collector.git"
   },
   "bugs": {
     "url": "https://github.com/euberdeveloper/coin-collector/issues",
     "email": "euberdeveloper@gmail.com"
   },
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "electron": "npm run electron-compile && ng build --base-href ./ && npm run electron-serve",
+    "angular-build": "cd angular-frontend && ng build --base-href ./",
+    "angular-prod": "cd angular-frontend && ng build --prod --build-optimizer --base-href ./",
+    "electron": "npm run electron-compile && npm run angular-build && npm run electron-serve",
     "electron-compile": "tsc --p electron && npm run electron-splashscreen",
     "electron-splashscreen": "copyfiles electron/**/*.html electron/**/*.css electron/**/*.js dist/",
-    "electron-prod": "npm run electron-compile && ng build --prod --build-optimizer --base-href ./ && npm run electron-serve",
-    "electron-build": "npm run electron-compile && ng build --base-href ./",
-    "electron-build-prod": "npm run electron-compile && ng build --prod --build-optimizer --base-href ./",
+    "electron-prod": "npm run electron-compile && npm run angular-prod && npm run electron-serve",
+    "electron-build": "npm run electron-compile && npm run angular-build",
+    "electron-build-prod": "npm run electron-compile && npm run angular-prod",
     "electron-serve": "electron .",
     "electron-icons": "electron-icon-maker --input=resources/src/icon.png --output=./resources",
-    "electron-package": "npm run electron-icons && electron-packager . CoinCollector --asar --all --prune --out=../dist/packaged --icon=resources/src/icon/icon.ico --overwrite",
-    "electron-package-windows": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=win32 --arch=x64 --prune --out=../dist/packaged --icon=resources/icons/win/icon.ico --overwrite",
-    "electron-package-linux": "npm run electron-icons && electron-packager . coin-collector --asar --platform=linux --arch=x64 --prune --out=../dist/packaged --icon=resources/icons/png/64x64.png --overwrite",
-    "electron-package-mac": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=darwin --arch=x64 --prune --out=../dist/packaged --icon=resources/icons/mac/icon.icns --overwrite",
+    "electron-package": "npm run electron-icons && electron-packager . CoinCollector --asar --all --prune --ignore=/angular-frontend/ --out=./dist/packaged --icon=resources/src/icon/icon.ico --overwrite",
+    "electron-package-windows": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=win32 --arch=x64 --prune --ignore=/angular-frontend/ --out=./dist/packaged --icon=resources/icons/win/icon.ico --overwrite",
+    "electron-package-linux": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=linux --arch=x64 --prune --ignore=/angular-frontend/ --out=./dist/packaged --icon=resources/icons/png/64x64.png --overwrite",
+    "electron-package-mac": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=darwin --arch=x64 --prune --ignore=/angular-frontend/ --out=./dist/packaged --icon=resources/icons/mac/icon.icns --overwrite",
     "electron-winstaller-compile": "tsc --p installer/windows",
     "electron-deploy-windows": "npm run electron-winstaller-compile && node dist/installer/windows/build",
     "electron-deploy-linux": "npm run electron-installer-debian --config installer/linux/debian_installer.json",
-    "electron-deploy-mac": "electron-installer-dmg ../dist/packaged/CoinCollector-darwin-x64 CoinCollector --out=../dist/deployed/mac --overwrite --icon=resources/icons/mac/icon.icns",
+    "electron-deploy-mac": "electron-installer-dmg ./dist/packaged/CoinCollector-darwin-x64 CoinCollector --out=./dist/deployed/mac --overwrite --icon=resources/icons/mac/icon.icns",
     "electron-windows": "npm run electron-compile && npm run electron-build-prod && npm run electron-package-windows && npm run electron-deploy-windows",
     "electron-linux": "npm run electron-compile && npm run electron-build-prod && npm run electron-package-linux && npm run electron-deploy-linux",
     "electron-mac": "npm run electron-compile && npm run electron-build-prod && npm run electron-package-mac && npm run electron-deploy-mac"
   },
   "private": true,
+  "devDependencies": {
+    "@types/electron-winstaller": "^2.6.2",
+    "@types/extract-zip": "^1.6.2",
+    "@types/node": "^11.9.3",
+    "copyfiles": "^2.1.0",
+    "electron": "^4.0.4",
+    "electron-icon-maker": "0.0.4",
+    "electron-packager": "^13.0.1",
+    "electron-winstaller": "^2.7.0",
+    "typescript": "^3.3.3"
+  },
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/cdk": "~7.1.1",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "~7.1.0",
-    "@angular/material": "^7.1.1",
-    "@angular/material-moment-adapter": "^7.1.1",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
-    "angular2-hotkeys": "^2.1.4",
-    "core-js": "^2.5.4",
-    "dexie": "^2.0.4",
     "electron-is-dev": "^1.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "extract-zip": "^1.6.7",
-    "hammerjs": "^2.0.8",
-    "material-design-icons": "^3.0.1",
-    "moment": "^2.22.2",
-    "ngx-childprocess": "0.0.6",
-    "ngx-electron": "^2.0.0",
-    "ngx-fs": "0.0.1",
-    "ngx-perfect-scrollbar": "^7.1.0",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "typeface-roboto": "0.0.54",
-    "zip-a-folder": "0.0.6",
-    "zone.js": "~0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.2",
-    "@angular/cli": "~7.1.1",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/language-service": "~7.1.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.9.5",
-    "codelyzer": "~4.5.0",
-    "copyfiles": "^2.1.0",
-    "electron": "^3.0.10",
-    "electron-icon-maker": "0.0.4",
-    "electron-installer-dmg": "^2.0.0",
-    "electron-packager": "^13.0.1",
-    "electron-winstaller": "^2.7.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
+    "zip-a-folder": "0.0.7"
   }
 }
