--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -24,10 +24,10 @@
     "electron-build-prod": "npm run electron-compile && npm run angular-prod",
     "electron-serve": "electron .",
     "electron-icons": "electron-icon-maker --input=resources/src/icon.png --output=./resources",
-    "electron-package": "npm run electron-icons && electron-packager . CoinCollector --asar --all --prune  --ignore=/resources/ --out=./dist/packaged --icon=resources/src/icon/icon.ico --overwrite",
-    "electron-package-windows": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=win32 --arch=x64 --prune  --ignore=/resources/ --out=./dist/packaged --icon=resources/icons/win/icon.ico --overwrite",
-    "electron-package-linux": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=linux --arch=x64 --prune  --ignore=/resources/ --out=./dist/packaged --icon=resources/icons/png/64x64.png --overwrite",
-    "electron-package-mac": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=darwin --arch=x64 --prune  --ignore=/resources/ --out=./dist/packaged --icon=resources/icons/mac/icon.icns --overwrite",
+    "electron-package": "npm run electron-icons && electron-packager . CoinCollector --asar --all --prune --ignore=/angular-frontend/ --out=./dist/packaged --icon=resources/src/icon/icon.ico --overwrite",
+    "electron-package-windows": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=win32 --arch=x64 --prune --ignore=/angular-frontend/ --out=./dist/packaged --icon=resources/icons/win/icon.ico --overwrite",
+    "electron-package-linux": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=linux --arch=x64 --prune --ignore=/angular-frontend/ --out=./dist/packaged --icon=resources/icons/png/64x64.png --overwrite",
+    "electron-package-mac": "npm run electron-icons && electron-packager . CoinCollector --asar --platform=darwin --arch=x64 --prune --ignore=/angular-frontend/ --out=./dist/packaged --icon=resources/icons/mac/icon.icns --overwrite",
     "electron-winstaller-compile": "tsc --p installer/windows",
     "electron-deploy-windows": "npm run electron-winstaller-compile && node dist/installer/windows/build",
     "electron-deploy-linux": "npm run electron-installer-debian --config installer/linux/debian_installer.json",
